# dynamic-dvrk-coppeliasim-simulator

./: .gitignore  CMakeLists.txt  README.md
Matlab/: FramesRotationFromDH.m  chain_position_complete.m  checkRefDH0.m  completeDH.m  dvrkDynModel_plots.m  dvrkDynParamsCoppeliaSimConversion.asv  dvrkDynParamsCoppeliaSimConversion.m  remApi.m  vec2sm.m
data/: one_no_weight_results.csv
dvrkDynModelLib/: dvrkDefines.hpp  dvrkDynModelLib.sln  dvrkDynModelLib.vcxproj  dvrkDynModelLib.vcxproj.filters  dvrkDynamics.cpp  dvrkDynamics.hpp  dvrkKinematics.cpp  dvrkKinematics.hpp
dvrkDynModelLib/x64/LogSession_1/: LogSessionInfo.txt  Ree.txt  g.txt  pee.txt  qdcmd.txt  qddmsr.txt  qdmsr.txt  qmsr.txt  tauModel.txt  tauMsr.txt
dvrkDynModelLib/x64/LogSession_2/: LogSessionInfo.txt  Rdes.txt  Ree.txt  g.txt  pdes.txt  pee.txt  qdcmd.txt  qddmsr.txt  qdmsr.txt  qmsr.txt  tauModel.txt  tauMsr.txt
dvrkDynModelLib/x64/LogSession_3/: LogSessionInfo.txt  Ree.txt  g.txt  pee.txt  qdcmd.txt  qddmsr.txt  qdmsr.txt  qmsr.txt  tauModel.txt  tauMsr.txt
dvrkDynModelLib/x64/LogSession_4/: LogSessionInfo.txt  Ree.txt  g.txt  pee.txt  qdcmd.txt  qddmsr.txt  qdmsr.txt  qmsr.txt  tauModel.txt  tauMsr.txt
dvrkDynModelLib/x64/LogSession_5/: LogSessionInfo.txt  Rdes.txt  Ree.txt  g.txt  pee.txt  qddmsr.txt  tauCmd.txt  tauMsr.txt
dvrkDynModelLib/x64/LogSession_6/: LogSessionInfo.txt  g.txt  qdcmd.txt  qdmsr.txt  qmsr.txt  tauModel.txt  tauMsr.txt
dvrkDynModelLib/x64/LogSession_7/: LogSessionInfo.txt  Ree.txt  dynamic-regulation-cart-position-error.eps  dynamic-regulation-cart-position.eps  dynamic-regulation-tauCmd.eps  g.txt  pdes.txt  pee.txt  qDes.txt  qddmsr.txt  qdmsr.txt  qmsr.txt  tauCmd.txt  tauModel.txt  tauMsr.txt
dvrkDynModelLib/x64/LogSession_8/: LogSessionInfo.txt  Ree.txt  dynamic-rectTraj-cart-position-error.eps  dynamic-rectTraj-cart-position.eps  dynamic-rectTraj-tauCmd.eps  g.txt  pdes.txt  pee.txt  qddmsr.txt  qdmsr.txt  qmsr.txt  tauCmd.txt  tauModel.txt  tauMsr.txt
dvrkDynModelLib/x64/LogSession_9/: LogSessionInfo.txt  Ree.txt  dynamic-spiralTraj-cart-position-error.eps  dynamic-spiralTraj-cart-position.eps  dynamic-spiralTraj-tauCmd.eps  g.txt  pdes.txt  pee.txt  qddmsr.txt  qdmsr.txt  qmsr.txt  tauCmd.txt  tauModel.txt  tauMsr.txt
dvrkDynModelLib/x64/Release/: dvrkDynModelLib.lib  dvrkDynModelLib_test.lib
dvrkDynModelLib_test/: dvrkDynModelLib_test.vcxproj  dvrkDynModelLib_test.vcxproj.filters  main.cpp  utils.cpp  utils.hpp
scenes/: dh_mf_script.lua  dh_mf_script_nocw.lua  dvrk_psm_am_w_fischer_hierarchy.ttt  dvrk_psm_am_w_fischer_hierarchy_no_cw.ttt  dyn_dVRK_1arm.ttt  dyn_dVRK_1arm_no_cw.ttt  dyn_dVRK_2arms.ttt  dyn_dVRK_script_1arm.lua  dyn_dVRK_script_1arm_no_cw.lua  dyn_dVRK_script_left.lua  dyn_dVRK_script_right.lua
